8233674: JarURLConnection.getJarFile throws Exception if some process is holding the file